更新 快速启动 中文翻译

--- a/docs/getting-started/quick-start/starting-with-ollama.mdx
+++ b/docs/getting-started/quick-start/starting-with-ollama.mdx
@@ -1,17 +1,17 @@
 ---
 sidebar_position: 1
-title: "🦙 Ollama 入门"
+title: "🦙 开始使用 Ollama"
 ---
 
 ## 概述
 
-Open WebUI 让连接和管理您的 **Ollama** 实例变得简单。本指南将带您完成连接设置、模型管理和入门步骤。
+Open WebUI 让连接和管理您的 **Ollama** 实例变得简单。本指南将指导您完成连接设置、模型管理和入门步骤。
 
 ---
 
 ## 步骤 1：设置 Ollama 连接
 
-一旦 Open WebUI 安装并运行，它会自动尝试连接到您的 Ollama 实例。如果一切顺利，您就可以立即开始管理和使用模型了。
+一旦 Open WebUI 安装并运行后，它会自动尝试连接到您的 Ollama 实例。如果一切顺利，您就可以立即开始管理和使用模型了。
 
 但是，如果您遇到连接问题，最常见的原因是网络配置错误。您可以参考我们的[连接故障排除指南](/troubleshooting/connection-error)来解决这些问题。
 
@@ -21,9 +21,9 @@ Open WebUI 让连接和管理您的 **Ollama** 实例变得简单。本指南将
 
 要在 Open WebUI 中管理您的 Ollama 实例，请按照以下步骤操作：
 
-1. 在 Open WebUI 中进入**管理员设置**。
-2. 导航到**连接 > Ollama > 管理**（点击扳手图标）。  
-   在这里，您可以下载模型、配置设置并管理您与 Ollama 的连接。
+1. 进入 Open WebUI 的**管理员设置**。
+2. 导航至**连接 > Ollama > 管理**（点击扳手图标）。  
+   在这里，您可以下载模型、配置设置和管理您的 Ollama 连接。
 
 以下是管理界面的样子：
 
@@ -40,7 +40,7 @@ Open WebUI 让连接和管理您的 **Ollama** 实例变得简单。本指南将
 
 ![Ollama 下载提示](/img/getting-started/quick-start/selector-ollama.png)
 
-如果您想跳过导航管理员设置菜单，直接开始使用模型，这种方法是完美的选择。
+如果您想跳过导航管理员设置菜单直接使用模型，这种方法是完美的选择。
 
 ---
 
