--- a/docs/getting-started/database.mdx
+++ b/docs/getting-started/database.mdx
@@ -1,88 +1,87 @@
 ---
 sidebar_position: 310 
-title: "📦 导出和导入数据库"
+title: "📦 数据库备份与恢复"
 ---
 
+如果你需要将 **Open WebUI** 数据（包括聊天历史记录、配置等）从一个服务器迁移到另一个服务器，或者进行数据备份，你可以使用数据库的导出和导入功能。本指南适用于使用内置 SQLite 数据库（非 PostgreSQL）的 Open WebUI 用户。
 
-如果您需要将 **Open WebUI** 数据（例如，聊天历史记录、配置等）从一个服务器迁移到另一个服务器，或者备份以供以后使用，您可以导出和导入数据库。本指南假设您使用内部 SQLite 数据库（而不是 PostgreSQL）运行 Open WebUI。
-
-按照以下步骤导出和导入包含您数据库的 `webui.db` 文件。
+下面介绍如何导出和导入 `webui.db` 数据库文件。
 
 ---
 
 ### 导出数据库
 
-要从当前 Open WebUI 实例导出数据库：
+从现有 Open WebUI 实例导出数据库的步骤：
 
-1. **使用 `docker cp` 复制数据库文件**：  
-   `webui.db` 文件位于容器内的 `/app/backend/data` 目录中。运行以下命令将其复制到您的本地机器：  
+1. **使用 `docker cp` 命令复制数据库文件**：  
+   `webui.db` 文件存储在容器的 `/app/backend/data` 目录中。执行以下命令将其复制到本地：  
    ```bash
    docker cp open-webui:/app/backend/data/webui.db ./webui.db
    ```
 
-2. **将导出的文件传输到新服务器**：  
-   您可以使用 **FileZilla** 或任何其他您选择的文件传输工具将 `webui.db` 文件移动到新服务器。
+2. **传输文件到目标服务器**：  
+   你可以使用 **FileZilla** 或其他文件传输工具将 `webui.db` 文件传输到新服务器。
 
    :::info
-   推荐使用 FileZilla，因为它在将文件传输到新服务器时易于使用。
+   推荐使用 FileZilla 工具，它提供了便捷的文件传输界面。
    :::
 
 ---
 
 ### 导入数据库
 
-将 `webui.db` 文件移动到新服务器后，按照以下步骤操作：
+将 `webui.db` 文件传输到新服务器后，按照以下步骤操作：
 
-1. **在新服务器上安装和运行 Open WebUI**：  
-   使用 Docker 容器设置和运行 Open WebUI。按照[🚀 入门指南](/getting-started)中提供的说明安装和启动 Open WebUI 容器。运行后，在执行导入步骤之前停止它。
+1. **新服务器上的准备工作**：  
+   首先在新服务器上部署 Open WebUI Docker 容器。具体安装步骤请参考[🚀 入门指南](/getting-started)。部署完成后，执行以下命令停止容器：
    ```bash
    docker stop open-webui
    ```
 
-2. **使用 `docker cp` 将数据库文件复制到容器**：  
-   假设导出的 `webui.db` 文件在您的当前工作目录中，将其复制到容器中：
+2. **导入数据库文件**：  
+   假设 `webui.db` 文件已在当前目录，执行以下命令将其导入容器：
    ```bash
    docker cp ./webui.db open-webui:/app/backend/data/webui.db
    ```
 
-3. **启动 Open WebUI 容器**：  
-   再次启动容器以使用导入的数据库。
+3. **启动服务**：  
+   执行以下命令启动容器，使用新导入的数据库：
    ```bash
    docker start open-webui
    ```
 
-   新服务器现在应该正在运行带有您导入数据库的 Open WebUI。
+   此时，新服务器上的 Open WebUI 应该已经包含了导入的数据。
 
 ---
 
-### 注意事项
+### ⚠️ 重要注意事项
 
-- 此导出/导入过程**仅在您使用内部 SQLite 数据库（`webui.db`）时有效**。
-- 如果您使用外部 PostgreSQL 数据库，此方法不适用，因为数据库在容器外部管理。对于 PostgreSQL，您需要遵循 PostgreSQL 特定的工具和程序来备份和恢复数据库。
+- 本备份恢复方案**仅适用于使用内置 SQLite 数据库（`webui.db`）的情况**
+- 如果你使用的是外部 PostgreSQL 数据库，请使用 PostgreSQL 专门的备份恢复工具
 
 ---
 
-### 为什么这很重要
+### 使用场景
 
-这种方法在以下情况下特别有用：
+此备份恢复方案适用于以下情况：
 
-- 将您的 Open WebUI 数据迁移到新服务器或机器。
-- 在更新或修改之前创建数据备份。
-- 在多个服务器上使用相同设置测试 Open WebUI。
+- 服务器迁移：将 Open WebUI 数据迁移到新服务器
+- 数据备份：在系统更新或修改前进行数据备份
+- 环境复制：在多个服务器上部署相同配置的测试环境
 
 ```bash
-# 导出和导入的快速命令摘要
-# 导出：
+# 常用命令速查
+# 1. 数据导出
 docker cp open-webui:/app/backend/data/webui.db ./webui.db
 
-# 在新服务器上停止容器：
+# 2. 停止目标服务器容器
 docker stop open-webui
 
-# 导入：
+# 3. 数据导入
 docker cp ./webui.db open-webui:/app/backend/data/webui.db
 
-# 启动容器：
+# 4. 启动服务
 docker start open-webui
 ```
 
-通过这些步骤，您可以轻松管理 Open WebUI 的迁移或备份过程。请记住您使用的数据库格式以确保兼容性。
+按照上述步骤，你可以安全地完成 Open WebUI 的数据迁移或备份工作。请确保使用正确的数据库格式以保证兼容性。
