更新 进阶主题 中文翻译

--- a/docs/getting-started/advanced-topics/index.mdx
+++ b/docs/getting-started/advanced-topics/index.mdx
@@ -1,40 +1,40 @@
 ---
 sidebar_position: 4
-title: "📚 高级主题"
+title: "📚 进阶主题"
 ---
 
-# 📚 高级主题
+# 📚 进阶主题
 
-深入探索 Open WebUI 的深层概念和高级配置，以增强您的设置。
+深入探索 Open WebUI 的进阶概念和高级配置，以增强你的配置。
 
 ---
 
 ## 🔧 环境配置  
-了解如何设置环境变量以自定义您的 Open WebUI 设置。  
+了解如何设置环境变量来自定义你的 Open WebUI 配置。  
 [环境配置指南](/getting-started/advanced-topics/env-configuration)
 
 ---
 
 ## 📊 日志和监控  
-学习如何有效地监控、记录日志和排除系统故障。  
+学习如何有效地监控、记录日志和排查系统问题。  
 [日志和监控指南](/getting-started/advanced-topics/logging)
 
 ---
 
 ## 🛠️ 开发指南  
-深入了解开发过程并学习如何为 Open WebUI 做出贡献。  
+深入了解开发过程，学习如何为 Open WebUI 做出贡献。  
 [开发指南](/getting-started/advanced-topics/development)
 
 ---
 
 ## 🔒 HTTPS 加密  
-通过在部署中实施 HTTPS 加密确保安全通信。  
+通过在部署中实施 HTTPS 加密确保通信安全。  
 [HTTPS 加密指南](/getting-started/advanced-topics/https-encryption)
 
 ---
 
 ## 🔗 API 端点  
-获取使用我们的模型进行 API 集成和自动化的基本信息。  
+获取使用我们模型进行 API 集成和自动化的重要信息。  
 [API 端点指南](/getting-started/advanced-topics/api-endpoints)
 
 ---
